--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="firstDiv"></div>
-    <div class="secondDiv"></div>
+    <div class="secondDiv"><a href="details/index.html"></a></div>
     
 </body>
 </html>
