--- a/index.html
+++ b/index.html
@@ -5,11 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myWebsite</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     <script src="/main.js"></script>
 
 </head>
 <body>
-    
+    <main>
+        <section class="glass">
+            <div class="dashboard">
+                <div class="user">
+                    <img src="/images/avatar.png" alt="">
+                    <h3>Influ</h3>
+                    <p>pro member</p>
+                </div>
+                <div class="links">
+                    <div class="link">
+                        <img src="/images/twitch.png" alt="">
+                        <h2>Streams</h2>
+                    </div>
+                    <div class="link">
+                        <img src="/images/steam.png" alt="">
+                        <h2>Games</h2>
+                    </div>
+                    <div class="link">
+                        <img src="/images/upcoming.png" alt="">
+                        <h2>New</h2>
+                    </div>
+                    <div class="link">
+                        <img src="/images/library.png" alt="">
+                        <h2>Library</h2>
+                    </div>
+                </div>
+                <div class="pro">
+                    <h2>join pro for free Games</h2>
+                    <img src="/images/controller.png" alt="">
+                </div>
+            </div>
+            <div class="games">
+                <div class="status">
+                    <h1>Active Games</h1>
+                    <input type="text" name="" id="">
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="/images/assassins.png" alt="">
+                        <div class="card-info">
+                            <h2>Assassins Creed Valhalla</h2>
+                            <p>PS5 Version</p>
+                            <div class="progress"></div>
+                            <h2 class="percentage">60%</h2>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/images/assassins.png" alt="">
+                        <div class="card-info">
+                            <h2>Assassins Creed Valhalla</h2>
+                            <p>PS5 Version</p>
+                            <div class="progress"></div>
+                            <h2 class="percentage">60%</h2>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/images/assassins.png" alt="">
+                        <div class="card-info">
+                            <h2>Assassins Creed Valhalla</h2>
+                            <p>PS5 Version</p>
+                            <div class="progress"></div>
+                            <h2 class="percentage">60%</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
 </body>
 </html>
