--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="dashboard">
                 <div class="user">
                     <img src="/images/avatar.png" alt="">
-                    <h3>Influ</h3>
+                    <h3>ED DEV</h3>
                     <p>pro member</p>
                 </div>
                 <div class="links">
